[package]
name = "piarao"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
dashu-ratio = "0.4"
dashu-base = "0.4.1"
lazy_static = "1.5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
